[tool.poetry]
name = "twitter-proxy"
version = "0.1.0"
description = ""
authors = ["Konstantin Gorbunov <konstunn@users.noreply.github.com"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
